SC - bug fixes to layer tree, cluster drag, label and popup attribute name visibility
git-svn-id: https://webgate.ec.europa.eu/CITnet/svn/UNIONVMS/branches/dev/unionvms-web@9872 ffa9caa6-9a2d-11e4-8c71-fd203efb3018

--- a/app/partial/spatial/spatial.less
+++ b/app/partial/spatial/spatial.less
@@ -13,6 +13,7 @@
 .executing-report {
 	position:fixed !important;
 	width: 100%;
+	margin: 0;
 	height: calc(~'100% - 180px');
     background-color: rgba(221, 221, 221, 0.4);
     text-align: center;
@@ -155,7 +156,7 @@ div.td:extend(td all) {}
 	> .thead {
 		> div.tr:extend(.table > thead > tr all) {}
 		> .tr {
-			border-top: 1px solid #dddddd; 
+			border-top: 1px solid #dddddd;
 			div.th:extend(.table > thead > tr > th all) {
 				display: table-cell;
 			}
@@ -188,7 +189,7 @@ div.td:extend(td all) {}
 			}
 		}
 	}
-	
+
 	.th,
 	.td {
 		overflow: hidden;
@@ -248,7 +249,7 @@ div.td:extend(td all) {}
     }
 	.innerErrorMessagesLabelTimer {
     	top: 20px;
-    }    
+    }
     .innerErrorMessagesCombobox {
     	right: 40px;
 	    top: 0;
@@ -262,7 +263,7 @@ div.td:extend(td all) {}
 		position: absolute;
 		top: 0;
 		right: 20px;
-		color: #999999;	
+		color: #999999;
 		font-size: 22px;
 	}
 	.accordionError {
@@ -283,11 +284,11 @@ div.td:extend(td all) {}
 	    line-height: 30px;
 	    margin-top: 20px;
 	}
-	
+
 	.innerErrorMessagesInputWithUpLabel {
 		right: 3px;
 	}
-	
+
 	.innerErrorMessagesDateWithUpLabel {
 	    right: 35px;
 	}
